[part1]  Add custom kubeconfig API (#172)
