# api/docs/swagger.yaml
@@ -10,6 +10,21 @@ definitions:
       result:
         description: 正常返回时的数据，可以为任意数据结构
     type: object
+  types.KubeConfigOptions:
+    properties:
+      cloud_name:
+        type: string
+      cluster_role:
+        type: string
+      config:
+        type: string
+      expiration_timestamp:
+        type: string
+      id:
+        type: integer
+      service_account:
+        type: string
+    type: object
 info:
   contact:
     email: support@gopixiu.io
@@ -74,4 +89,124 @@ paths:
       summary: Get a cloud
       tags:
       - clouds
+  /clouds/v1/{cloud_name}/kubeconfigs:
+    get:
+      consumes:
+      - application/json
+      description: get by cloud kubeConfig ID
+      parameters:
+      - description: cloud name
+        format: string
+        in: path
+        name: cloud_name
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/httputils.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputils.Response'
+      summary: get a cloud custom kubeConfig
+      tags:
+      - kubeConfigs
+    post:
+      consumes:
+      - application/json
+      description: Create by cloud kubeConfig
+      parameters:
+      - description: cloud name
+        format: string
+        in: path
+        name: cloud_name
+        required: true
+        type: string
+      - description: service_account, cluster_role
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/types.KubeConfigOptions'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/httputils.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputils.Response'
+      summary: Create a cloud custom kubeConfig
+      tags:
+      - kubeConfigs
+  /clouds/v1/{cloud_name}/kubeconfigs/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete by cloud kubeConfig ID
+      parameters:
+      - description: cloud name
+        format: string
+        in: path
+        name: cloud_name
+        required: true
+        type: string
+      - description: Cloud ID
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/httputils.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputils.Response'
+      summary: Delete a cloud custom kubeConfig
+      tags:
+      - kubeConfigs
+    get:
+      consumes:
+      - application/json
+      description: get by cloud kubeConfig ID
+      parameters:
+      - description: cloud name
+        format: string
+        in: path
+        name: cloud_name
+        required: true
+        type: string
+      - description: kubeConfig ID
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/httputils.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputils.Response'
+      summary: get a cloud custom kubeConfig
+      tags:
+      - kubeConfigs
 swagger: "2.0"
