# api/server/router/cloud/cloud.go
@@ -40,6 +40,14 @@ func (s *cloudRouter) initRoutes(ginEngine *gin.Engine) {
 		cloudRoute.GET("/:id", s.getCloud)
 		cloudRoute.GET("", s.listClouds)
 
+		// kubeConfig API
+		// 点击生成指定权限的 kubeConfig，支持用完销毁
+		cloudRoute.POST("/v1/:cloud_name/kubeconfigs", s.createKubeConfig)
+		cloudRoute.PUT("/v1/:cloud_name/kubeconfigs/:id", s.updateKubeConfig)
+		cloudRoute.DELETE("/v1/:cloud_name/kubeconfigs/:id", s.deleteKubeConfig)
+		cloudRoute.GET("/v1/:cloud_name/kubeconfigs/:id", s.getKubeConfig)
+		cloudRoute.GET("/v1/:cloud_name/kubeconfigs", s.listKubeConfig)
+
 		// Node API
 		cloudRoute.GET("/v1/:cloud_name/nodes/:object_name", s.getNode)
 		cloudRoute.GET("/v1/:cloud_name/nodes", s.listNodes)
@@ -59,7 +67,7 @@ func (s *cloudRouter) initRoutes(ginEngine *gin.Engine) {
 		cloudRoute.GET("/core/v1/:cloud_name/namespaces/:namespace/services", s.listServices)
 
 		// Event API
-		// TODO: 事件的搞笑，精细化输出
+		// TODO: 事件的优化，精细化输出
 		cloudRoute.GET("/core/v1/:cloud_name/namespaces/:namespace/events", s.listEvents)
 
 		// Deployments API
