# pkg/db/model/model.go
@@ -53,3 +53,17 @@ type User struct {
 func (user *User) TableName() string {
 	return "users"
 }
+
+type KubeConfig struct {
+	gopixiu.Model
+
+	ServiceAccount      string `gorm:"unique" json:"service_account"`
+	CloudName           string `gorm:"index:idx_cloud_name" json:"cloud_name"`
+	ClusterRole         string `json:"cluster_role"`
+	Config              string `gorm:"type:text" json:"config"`
+	ExpirationTimestamp string `json:"expiration_timestamp"`
+}
+
+func (*KubeConfig) TableName() string {
+	return "kube_configs"
+}
